Update john wick 2.html

--- a/all movies/john wick 2/john wick 2.html
+++ b/all movies/john wick 2/john wick 2.html
@@ -287,7 +287,7 @@ header .toggle{
 
         <div class="content">
 
-            <h2><span>John Wick: Chapter 2</span></h2>
+            <h2><span>John Wick: <br> Chapter 2</span></h2>
 
             <p>
                 Renowned assassin John Wick sets out for Rome to duel with some of the deadliest killers to fulfil a vow he made. However, he soon learns that there is a huge bounty on his head.
