--- a/index.html
+++ b/index.html
@@ -294,7 +294,9 @@
 
              <div class="swiper-slide poster">
 
-                <div class="poster-img"><img src="./img/no way home poster.jpg" alt=""></div>
+                <div class="poster-img">
+                    <a target="_blank" href="./all movies/spiderman no way home/no way homee.html"><img src="./img/no way home poster.jpg" alt=""></a>
+                </div>
 
              <h3>spider man: no way home</h3>
              
