--- a/all movies/venom/venom.html
+++ b/all movies/venom/venom.html
@@ -330,9 +330,10 @@ header .toggle{
         <h2 class="heading">Downloads</h2>
 
         <a target="_blank" href="https://terabox.com/s/11ct3VdMzRljtyeo0S36x6Q" class="button">3d vr</a>
-        <a target="_blank" href="https://driveapp.in/file/od0L5LpSkN6MfwFXtAHa" class="button">sd</a>
-        <a target="_blank" href="https://driveapp.in/file/yIQb1sj8Z1KEwJvSXoYw" class="button">hd</a>
-        <a target="_blank" href="https://driveapp.in/file/ddOJhs1Nv1U32r4O8i7O" class="button">fhd</a>
+        <a target="_blank" href="https://driveapp.in/dfile/dUXJCHRscYndSGJ1e9tBToKKsA8YJFS7440OAY1V" class="button">sd</a>
+        <a target="_blank" href="https://driveapp.in/dfile/YHwp8ZInBwQbMvoekXS0czsYKcEt0JKHgDklFk0r" class="button">hd</a>
+        <a target="_blank" href="https://driveapp.in/dfile/99ydpMB5Wykpi22dXrKbvxyluImsxhbZiIoiMA2a" class="button">fhd</a>
+        <a target="_blank" href="magnet:?xt=urn:btih:AA68396B54FC91DB08FC90676382FF19DCD97FF6&dn=Venom.2018.4K.HDR.2160p.BDRip+Ita+Eng+x265-NAHOM&tr=udp%3A%2F%2Ftracker.coppersurfer.tk%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337%2Fannounce&tr=udp%3A%2F%2F9.rarbg.com%3A2710%2Fannounce&tr=udp%3A%2F%2F9.rarbg.to%3A2710%2Fannounce&tr=udp%3A%2F%2F9.rarbg.me%3A2710%2Fannounce&tr=udp%3A%2F%2Fglotorrents.pw%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.openbittorrent.com%3A80%2Fannounce&tr=udp%3A%2F%2Ftracker.torrent.eu.org%3A451%2Fannounce&tr=udp%3A%2F%2Fexodus.desync.com%3A6969%2Fannounce&tr=udp%3A%2F%2Fexodus.desync.com%3A6969&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337%2Fannounce&tr=http%3A%2F%2Ftracker.openbittorrent.com%3A80%2Fannounce&tr=udp%3A%2F%2Fopentracker.i2p.rocks%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.internetwarriors.net%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969%2Fannounce&tr=udp%3A%2F%2Fcoppersurfer.tk%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.zer0day.to%3A1337%2Fannounce" class="button">4k</a>
         
 
     </section>
