--- a/all anime/Your Name/Your Name.html
+++ b/all anime/Your Name/Your Name.html
@@ -342,7 +342,7 @@ header .toggle{
 
         <h2 class="heading">ANIME SUB</h2>
 
-        <a target="_blank" href="https://production.small-fire-savaan.savuci93.workers.dev/fUhFzuwKf3WO64AHbHg6pWNKZcMMQfmxsWgNNSWQ/gd5.botworker.xyz/[AnimeFlix.in]KiminoNawa(Dual%20Audio10bitBD720px265).mkv" class="button">hd</a>
+        <a target="_blank" href="https://goload.pro/download?id=NzU4ODg=&typesub=Gogoanime-SUB&title=Kimi+no+Na+wa.+Episode+1" class="button">hd</a>
         <a target="_blank" href="https://aged-tooth-savaan.gccy89.workers.dev/kty3TwmWvijUuCSw2cwfA6Nh51oB5AATjAzC0nrc/gd5.botworker.xyz/[AnimeFlix.in]%20Kimi%20no%20na%20Wa%20[BD][1080p][10bit][Dual%20Audio][x265].mkv" class="button">fhd</a>
        <a target="_blank" href="magnet:?xt=urn:btih:4B37FF0E0EDC511BD96448C0039C0F7A9913AC4E&dn=Kimi+no+Na+Wa.+%28Your+Name.%29+%5BBD+2160p+4K+UHD%5D%5BHEVC+x265+10bit%5D%5BDual-Audio%5D%5BMulti-Subs%5D+-+Judas&tr=http%3A%2F%2Fnyaa.tracker.wf%3A7777%2Fannounce&tr=udp%3A%2F%2Fexodus.desync.com%3A6969%2Fannounce&tr=udp%3A%2F%2Fopen.stealth.si%3A80%2Fannounce&tr=udp%3A%2F%2Ftracker.opentrackr.org%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.coppersurfer.tk%3A6969%2Fannounce&tr=udp%3A%2F%2Ftracker.zer0day.to%3A1337%2Fannounce&tr=udp%3A%2F%2Ftracker.leechers-paradise.org%3A6969%2Fannounce&tr=udp%3A%2F%2Fcoppersurfer.tk%3A6969%2Fannounce" class="button">4k</a>
 
@@ -350,7 +350,7 @@ header .toggle{
 
     <section class="download-container">
 
-        <a target="_blank" href="https://fembed-hd.com/v/y2zjdhe3jdr6gw-" class="button1">WATCH ONLINE</a>
+        <a target="_blank" href="https://animixplay.to/v1/kimi-no-na-wa" class="button1">WATCH ONLINE SUB</a>
 
     </section>
 
@@ -367,7 +367,7 @@ header .toggle{
 
     <section class="download-container">
 
-        <a target="_blank" href="https://fembed-hd.com/v/kyjk1s31ngzeww8" class="button1">WATCH ONLINE</a>
+        <a target="_blank" href="https://animixplay.to/v1/kimi-no-na-wa-dub" class="button1">WATCH ONLINE DUB</a>
 
     </section>
 
