--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@
 
     <section class="anime" id="anime">
 
-        <h2 class="heading">ANIME</h2>
+        <h2 class="heading">ANIME MOVIES</h2>
 
         <!-- anime container-->
 
